--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@openzeppelin/contracts": "^4.8.3",
     "@pinata/sdk": "^1.1.2",
+    "base64-sol": "^1.1.0",
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^4.0.10",
